# j4status

./: .gitignore  .gitmodules  .travis.yml  CNAME  Makefile.am  README.md  autogen.sh  configure.ac  index.html  meson.build  meson_options.txt
include/: config.h  config.h.in  j4status-output.h  j4status-plugin-input.h  j4status-plugin-output.h  j4status-plugin-private.h  j4status-plugin.h  libj4status-config.h
input-output/i3bar/: i3bar.mk  meson.build
input-output/i3bar/man/: j4status-i3bar.conf.xml
input-output/i3bar/src/: input.c  output.c
input/file-monitor/: file-monitor.mk  meson.build
input/file-monitor/man/: j4status-file-monitor.conf.xml
input/file-monitor/src/: file-monitor.c
input/mpd/: meson.build  mpd.mk
input/mpd/man/: j4status-mpd.conf.xml
input/mpd/src/: mpd.c
input/nl/: meson.build  nl.mk
input/nl/man/: j4status-nl.conf.xml
input/nl/src/: nl.c
input/nm/: nm.mk
input/nm/man/: j4status-nm.conf.xml
input/nm/src/: nm.c
input/pulseaudio/: meson.build  pulseaudio.mk
input/pulseaudio/man/: j4status-pulseaudio.conf.xml
input/pulseaudio/src/: pulseaudio.c
input/sensors/: meson.build  sensors.mk
input/sensors/man/: j4status-sensors.conf.xml
input/sensors/src/: sensors.c
input/systemd/: meson.build  systemd.mk
input/systemd/man/: j4status-systemd.conf.xml
input/systemd/src/: systemd.c
input/time/: meson.build  time.mk
input/time/man/: j4status-time.conf.xml
input/time/src/: time.c
input/upower/: meson.build  upower.mk
input/upower/man/: j4status-upower.conf.xml
input/upower/src/: upower.c
libj4status-plugin/: libj4status-plugin.mk  meson.build
libj4status-plugin/include/: j4status-plugin-input.h  j4status-plugin-output.h  j4status-plugin-private.h  j4status-plugin.h
libj4status-plugin/pkgconfig/: libj4status-plugin.pc.in
libj4status-plugin/src/: config.c  core.c  plugin.c  section.c  utils.c
m4/: compat.m4  j4status-plugins.m4
main/: j4status.mk  meson.build
main/man/: j4status.conf.xml  j4status.xml
main/src/: io.c  io.h  j4status.c  j4status.h  plugins.c  plugins.h  types.h
main/units/: j4status@.service.in  j4status@.socket.in
man/: config.dtd.in  config.ent.in  index.html  j4status-file-monitor.conf.html  j4status-file-monitor.conf.xml  j4status-flat.conf.xml  j4status-i3bar.conf.html  j4status-i3bar.conf.xml  j4status-mpd.conf.xml  j4status-mpris.conf.xml  j4status-nm.conf.html  j4status-nm.conf.xml  j4status-sensors.conf.html  j4status-sensors.conf.xml  j4status-systemd.conf.html  j4status-systemd.conf.xml  j4status-time.conf.html  j4status-time.conf.xml  j4status.conf.html  j4status.conf.xml  j4status.html  j4status.xml  man.mk
output/debug/: debug.mk  meson.build
output/debug/src/: debug.c
output/evp/: evp.mk  meson.build
output/evp/man/: j4status-evp.conf.xml
output/evp/src/: evp.c
output/flat/: flat.mk  meson.build
output/flat/man/: j4status-flat.conf.xml
output/flat/src/: flat.c
output/pango/: meson.build  pango.mk
output/pango/man/: j4status-pango.conf.xml
output/pango/src/: pango.c
src/: config.ent.in  man.mk  units.mk
src/input-output/i3bar/: i3bar.mk  input.c  output.c
src/input/file-monitor/: file-monitor.c  file-monitor.mk
src/input/i3focus/: i3focus.c  i3focus.mk
src/input/mpd/: mpd.c  mpd.mk
src/input/mpris/: mpris.c  mpris.mk
src/input/nm/: nm.c  nm.mk
src/input/sensors/: sensors.c  sensors.mk
src/input/systemd/: systemd.c  systemd.mk
src/input/time/: time.c  time.mk
src/input/upower/: upower.c  upower.mk
src/j4status/: j4status.c  j4status.mk  plugins.c  plugins.h
src/libj4status/: config.c  libj4status.mk
src/libj4status-plugin/: core.c  libj4status-plugin.mk  libj4status-plugin.pc.in  plugin.c  section.c  utils.c
src/output/debug/: debug.c  debug.mk
src/output/flat/: flat.c  flat.mk
src/output/i3bar/: i3bar.c  i3bar.mk
